; ModuleID = '/home/carl/AnghaBench/h2o/src/extr_main.c_encode_quic_forwarded_header.c'
source_filename = "/home/carl/AnghaBench/h2o/src/extr_main.c_encode_quic_forwarded_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@H2O_QUIC_FORWARDED_VERSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32*, i32*, i32)* @encode_quic_forwarded_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @encode_quic_forwarded_header(i8* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = getelementptr inbounds i32, i32* %12, i32 1
  store i32* %13, i32** %9, align 8
  store i32 128, i32* %12, align 4
  %14 = load i32*, i32** %9, align 8
  %15 = load i32, i32* @H2O_QUIC_FORWARDED_VERSION, align 4
  %16 = call i32* @quicly_encode32(i32* %14, i32 %15)
  store i32* %16, i32** %9, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32* @encode_quic_address(i32* %17, i32* %18)
  store i32* %19, i32** %9, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = call i32* @encode_quic_address(i32* %20, i32* %21)
  store i32* %22, i32** %9, align 8
  %23 = load i32, i32* %8, align 4
  %24 = load i32*, i32** %9, align 8
  %25 = getelementptr inbounds i32, i32* %24, i32 1
  store i32* %25, i32** %9, align 8
  store i32 %23, i32* %24, align 4
  %26 = load i32*, i32** %9, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = bitcast i8* %27 to i32*
  %29 = ptrtoint i32* %26 to i64
  %30 = ptrtoint i32* %28 to i64
  %31 = sub i64 %29, %30
  %32 = sdiv exact i64 %31, 4
  ret i64 %32
}

declare dso_local i32* @quicly_encode32(i32*, i32) #1

declare dso_local i32* @encode_quic_address(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
